Fix overflow Chrome bug white scroll with scroll auto

--- a/src/index.scss
+++ b/src/index.scss
@@ -282,7 +282,7 @@ input:focus::placeholder {
 .overflow-auto { overflow: auto; }
 // .overflow-x-visible { overflow-x: visible; }
 // .overflow-x-hidden { overflow-x: hidden; }
-.overflow-x-scroll { overflow-x: scroll; }
+// .overflow-x-scroll { overflow-x: scroll; }
 // .overflow-x-auto { overflow-x: auto; }
 // .overflow-y-visible { overflow-y: visible; }
 // .overflow-y-hidden { overflow-y: hidden; }
